Reorganize; start on service impl
